--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,13 +68,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <h1>用区块链技术改进<br>现有的业务模式</h1>
+                    <h1>用区块链技术改进<br>各行业现有的业务</h1>
                     <div class="h2-banner h2-border color-white">
-                        提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助企业简化办事流程、提高办事效率，并确保规章制度的公平和公正。</div>
+                        提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助企业简化流程、提高效率，确保制度的公平和公正。</div>
                     <div class="banner-text">
                         OpenLedger提供区块链技术开发服务和定制化区块链底层系统的研发，用技术去推动各个行业、商业模式从传统技术到区块链技术的过渡，为业务的转型提供动力。
-                        <br><br>基于革命性的去中心化网络构建新的业务管理软件。
-                        <br><br>通过我们提供的区块链技术服务上建立您的愿景，或者创建您自己的安全地区块链网络并在上面开展您的业务。
                     </div>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -94,7 +92,7 @@
                 <div class="text">
                     OpenLedger拥有专业区块链技术团队来提供技术服务。
                     <br><br>
-                    基于全球最受欢迎的区块链底层系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发，并且根据您现有的需求和规模来设计最佳的解决方案。
+                    基于全球最受欢迎的区块链底层系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
             </div>
@@ -105,7 +103,6 @@
                 <div class="text" style="text-align: left;">
                     <br>OpenLedger为金融、科技、娱乐等其它行业提供定制化的基于区块链的解决方案。
                     <br><br>以专业的知识和技能以及在区块链行业多年累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，来满足您行业的需求。
-                    <br><br>通过基于区块链技术的业务管理、操作透明和对企业资产即时完全的把控来促进您企业的发展。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
             </div>
