--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -40,10 +40,10 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>EOSIO开发服务</h1>
-                    <div class="h2-banner">可扩展的去中心化应用程序<br>用于企业的区块链4.0</div>
+                    <div class="h2-banner">可扩展的DApp<br>用于企业的区块链4.0</div>
                     <div class="text">
                         <div>
-                            <div>EOSIO是一个具有较高运行速度的区块链底层平台，<br>并且具有一般企业所需的安全性和基于角色的访问权限功能。</div>
+                            <div>EOSIO是一个具有高性能的区块链底层平台，<br>并且具有一般企业所需的安全性和基于角色访问的权限功能。</div>
                         </div>
                     </div>
                     <a href="#contact" class="link">现在联系</a>
@@ -57,7 +57,7 @@
             <div class="why-graphene-content why-eosio">
                 <h2>为什么选择EOSIO？</h2>
                 <div class="h4 gor-100">
-                    在通用的智能合约平台上构建和运行去中心化的应用程序可以为您企业的办事效率大大提升。<br>拥有和传统程序相当的速度和易用性、基于角色的安全控制、无限的可扩展性、交互式的智能合约、快速开发和部署。
+                    在通用的智能合约平台上构建和运行DApp可以为您企业的办事效率大大提升。<br>拥有和传统程序相当的速度和易用性、基于角色的安全控制、无限的可扩展性、交互式的智能合约、快速开发和部署。
                 </div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
@@ -66,7 +66,7 @@
                             <div class="point point-accordion">
                                 <h3>企业级安全</h3>
                                 <div class="text">
-                                    <p>基于角色的权限控制使您可以将关键的业务用Dapp构建，确保不同访问级别的权限把控，并且保留了加密的活动日志用于后期审计。</p>
+                                    <p>基于角色的权限控制使您可以将关键的业务用DApp构建，确保不同访问级别的权限把控，并且保留了加密的活动日志用于后期审计。</p>
                                 </div>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Dapps适用于每一个行业</h3>
+                                <h3>适用任何行业</h3>
                                 <div class="text">
                                     <p>用EOSIO编写的Dapp可以满足不同的行业以及垂直领域的业务需求。</p>
                                 </div>
@@ -181,8 +181,8 @@
 
                     <div class="col-md-4">
                         <div class="tile tile-collapse point-accordion-plus">
-                            <h3>去中心化的应用</h3>
-                            <div class="text">根据您的需求使用EOS通证或自己的通证创建去中心化应用程序。</div>
+                            <h3>DApp</h3>
+                            <div class="text">根据您的需求使用EOS通证或自己的通证创建Dapp。</div>
                         </div>
                     </div>
 
