--- a/views/services/graphene-bitshares.ejs
+++ b/views/services/graphene-bitshares.ejs
@@ -135,7 +135,7 @@
                         <div class="tile tile-collapse">
                             <h3>云存储</h3>
                             <div class="text">
-                                通过去中心化的区块链数据存储允许您完全控制您的数据，并确保数据不会被删除、破坏或篡改。
+                                通过去中心化的区块链数据存储允许您完全控制您的数字资产，并确保数据不会被删除、破坏或篡改。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
