--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -41,9 +41,7 @@
                 <div class="col-lg-9 col-sm-12">
                     <h1>基于区块链的<br>物联网解决方案</h1>
                     <div class="h2-banner h2-banner-indents">
-                        区块链使物联网安全、透明、防篡改。
-                        <br>
-                        通过快速的数字事务和完整的流程跟踪，
+                        通过高效的事务处理和完整的流程跟踪，
                         <br>
                         获取关于客户、资产和位置的实时数据。
                         <br>
@@ -64,9 +62,9 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="puffy">
-                            <h3 class="h5">物联网往往需要收集大量数据，为新的商业决策提供更准确的信息。。</h3>
+                            <h3 class="h5">物联网需要收集大量的数据，为下一步的决策提供更准确的信息。</h3>
                             <p>
-                                区块链提供可验证的、安全和永久的数据存储。并将安全性和可审核性自动化。它们共同使数据可用、可信赖和安全。
+                                区块链提供可验证、安全和永久的数据存储，通过智能合约的自动事务流转使这些数据变得高可用，可信赖。
                             </p>
                         </div>
                     </div>
@@ -94,14 +92,14 @@
 
         <div class="how-we-bring">
             <div class="container">
-                <h2>我们是如何将区块链技术和物联网结合</h2>
+                <h2>如何将区块链技术和物联网结合</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        由于数据流的安全性和完整性方面的存在的各种问题，企业在物联网应用方面面临诸多挑战。通过我们的区块链物联网解决方案，OpenLedger可以解决这些问题，推动物联网设备无故障集成到你的业务中。
+                        由于数据流的安全性和完整性方面存在的各种问题，物联网企业在应用方面面临各种问题。通过区块链物联网解决方案，OpenLedger可以解决这些问题，推动物联网设备无缝集成到你的业务当中。
                     </div>
                 </div>
                 <ul class="black-point-list">
-                    <li>不可改变</li>
+                    <li>不可变</li>
                     <li class="point-list-partition">|</li>
                     <li>加密</li>
                     <li class="point-list-partition">|</li>
@@ -114,10 +112,10 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>数字身份认证和来源</h3>
+                                <h3>数字身份的认证和来源</h3>
                                 <div class="text">
                                     <p>
-                                        通过区块链强大的验证机制和可追溯的数字身份管理，可以实现数据的透明、点到点的流程追踪。
+                                        强大的验证机制和可追溯的数字身份管理，可以实现数据的透明、点到点的流程追踪。
                                     </p>
                                 </div>
                             </div>
@@ -128,7 +126,7 @@
                                 <h3>事务自动化与验证</h3>
                                 <div class="text">
                                     <p>
-                                        智能合约自动处理每个业务事务，包括机器对机器的交互，允许远程资产管理和即时数据验证。
+                                        智能合约自动处理每个事务，包括机器和机器的交互，允许远程资产的管理和即时的数据验证。
                                     </p>
                                 </div>
                             </div>
@@ -139,7 +137,7 @@
                                 <h3>数据交换</h3>
                                 <div class="text">
                                     <p>
-                                        在去中心化的区块链内，通过网络实时共享物联网产生的数据流。每个记录都是不可变的，并且对所有网络成员可见。
+                                        在去中心化的区块链系统中，实时共享物联网产生的数据流。每个记录都是不可变的，并且对所有网络成员可见。
                                     </p>
                                 </div>
                             </div>
@@ -150,7 +148,7 @@
                                 <h3>物联网数据分析</h3>
                                 <div class="text">
                                     <p>
-                                        区块链为所连接的服务和设备收集的数据提供了详细的预测分析机会，记录元数据并生成物联网生态系统中不可变的决策历史。
+                                        在物联网生态系统中，区块链提供的元数据给物联网设备提供了详细的预测和分析的条件，同时也记录了人或机器决策的历史。
                                     </p>
                                 </div>
                             </div>
@@ -161,7 +159,7 @@
                                 <h3>网络安全</h3>
                                 <div class="text">
                                     <p>
-                                        区块链将攻击面减少到最小，消除了集中的数据湖。分布式账本通过基于哈希的安全、定制的共识协议和安全的软件更新来解决当前的物联网安全威胁。
+                                        消除了集中的数据湖。分布式账本通过基于哈希的安全、定制的共识协议和软件更新来解决当前的物联网安全威胁。
                                     </p>
                                 </div>
                             </div>
@@ -169,10 +167,10 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>无压力的可伸缩性</h3>
+                                <h3>可无限拓展</h3>
                                 <div class="text">
                                     <p>
-                                        区块链消除了集中的、基于云的物联网平台的限制，允许连接设备和交易的数量扩展，而不影响基础设施和数据管理。
+                                        解决了基于云的物联网平台的限制，允许连接的设备和事务的数量无限的扩展。
                                     </p>
                                 </div>
                             </div>
@@ -203,7 +201,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7">
-                        <h2 class="h5 black-h5">我们消除了您的选择顾虑</h2>
+                        <h2 class="h5 black-h5">消除您的选择顾虑</h2>
                     </div>
                     <div class="col-md-5">
                         <p>
@@ -225,7 +223,7 @@
             <div class="container">
                 <h2>区块链和物联网跨行业的结合</h2>
                 <div class="h4 gor-100">
-                    OpenLedger提供创新的解决方案，将物联网与加密的、不可变的、可审计的区块链相结合。这种结合带来了一系列独特的好处:
+                    OpenLedger提供创新的解决方案，将物联网与加密的、不可篡改的、可审计的区块链相结合。这种结合带来了诸多好处:
                 </div>
             </div>
         </div>
@@ -240,10 +238,9 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">医疗保健</h3>
                                 <ul class="across-sub-menu">
-                                    <li>能够实时跟踪慢性病</li>
-                                    <li>确保联网医疗设备记录的私人病人数据的安全性</li>
-                                    <li>将设备和人员监控连接到一个可扩展的系统中</li>
-                                    <li>基于持续的病人健康状况监测，个性化健康保险</li>
+                                    <li>实时跟踪慢性病</li>
+                                    <li>确保联网医疗设备记录的个人数据的安全性</li>
+                                    <li>将设备对个人数据的监控转移到可无限拓展的系统中</li>
                                 </ul>
                             </div>
                         </div>
@@ -255,10 +252,9 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">供应链</h3>
                                 <ul class="across-sub-menu">
-                                    <li>获得从生产到销售的端到端的可见性</li>
-                                    <li>为顺利转运及跨境交易提供即时资讯共享服务</li>
+                                    <li>从生产到销售的端到端的可见性</li>
+                                    <li>转运及跨境交易提供即时资讯共享服务</li>
                                     <li>确保供应链网络的可靠性和可追溯性</li>
-                                    <li>提高库存管理</li>
                                 </ul>
                             </div>
                         </div>
@@ -270,8 +266,8 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">物流</h3>
                                 <ul class="across-sub-menu">
-                                    <li>利用来自运动传感器、GPS、温度传感器、车辆传感器和连接设备的数据实现运输过程的透明性</li>
-                                    <li>消除延迟交货</li>
+                                    <li>来自运动传感器、GPS、温度传感器、车辆传感器和其它设备的数据实现运输过程的透明性</li>
+                                    <!-- <li>消除延迟交货</li> -->
                                     <li>自动化管理、报告和文档工作流程</li>
                                     <li>改善运输成本和风险管理</li>
                                 </ul>
@@ -285,10 +281,10 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">金融科技</h3>
                                 <ul class="across-sub-menu">
-                                    <li>确保对按使用付费模式的保护的有效性</li>
+                                    <li>保护按使用付费的模式</li>
                                     <li>保护无线支付和信用卡数据</li>
-                                    <li>保护现有和新兴的生物识别系统</li>
-                                    <li>根据客户的交易和行为模式定制忠诚度计划</li>
+                                    <li>保护生物识别系统</li>
+                                    <li>根据客户的交易和行为模式定制忠诚度</li>
                                 </ul>
                             </div>
                         </div>
@@ -300,7 +296,7 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">汽车</h3>
                                 <ul class="across-sub-menu">
-                                    <li>用区块链的认证来避免欺骗性的汽车零件交易</li>
+                                    <li>避免欺骗性的汽车零件交易</li>
                                     <li>使用嵌入式传感器优化车辆维护和维修日志</li>
                                     <li>简化制造商、进口商、分销商、经销商和其他各方之间的文件和付款处理</li>
                                 </ul>
@@ -314,9 +310,10 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">不动产</h3>
                                 <ul class="across-sub-menu">
-                                    <li>通过持续的财产状况跟踪，加速客户的定制化的保险处理过程</li>
-                                    <li>加快财产在所有权历史，财产年龄，折旧评估方面的详细信息的搜索过程</li>
-                                    <li>通过嵌入GPS跟踪器、测量标记和不可变时间戳土地记录，改进产权管理，降低欺诈风险</li>
+                                    <li>通过持续的财产状况跟踪，加快客户的保险处理过程</li>
+                                    <li>加快不动产的历史，年数，折旧评估等方面详细信息的搜索过程</li>
+                                    <li>通过土地信息的记录，改进产权的管理，降低欺诈风险</li>
+                                    <!-- <li>通过区块链的保护措施，消除第三方中介所带来的成本</li> -->
                                 </ul>
                             </div>
                         </div>
