--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -54,19 +54,19 @@
             <h2>传统的供应链存在各种问题</h2>
             <div class="row">
                 <div class="col-md-4 font-weight-bold">
-                    <p>从小规模的批发商到经销商或是国际贸易公司得供应链都存在着相同的危险和障碍</p>
+                    <p>从小规模的批发商到经销商或者是国际贸易公司的供应链都存在着相同的问题</p>
                 </div>
                 <div class="col-md-4 text_challenges_2-md">
                     <ul>
                         <li>供应链成员获得的信息分散、延迟、不完整、不可靠</li>
-                        <li>库存管理和文档工作产生的过多的成本</li>
-                        <li>自然灾害，不可预见的短缺，需求激增</li>
+                        <li>库存管理和文档工作产生过多的成本</li>
+                        <li>自然灾害、不可预见的短缺、需求激增等</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul>
                         <li>资产的可追溯性不足</li>
-                        <li>欺诈和盗窃、人为错误、假冒伪劣商品以及安全保障的缺失</li>
+                        <li>欺诈和盗窃、人为操作错误、假冒伪劣商品以及安全保障的缺失</li>
                         <li>无法满足客户的期望</li>
                         <li>缺乏通用且可维护的数据库</li>
                     </ul>
@@ -74,13 +74,13 @@
             </div>
         </div>
 
-        <div class="container">
-            <h2>为什么使用区块链技术的供应链会比使用传统技术的会更好</h2>
+        <div class="container" style="margin-bottom: 20px;">
+            <h2>为什么使用区块链技术的供应链会比使用传统技术更好</h2>
             <div class="row narrow">
                 <div class="col-md-6">
                     <div class="h4">改变企业供应链市场的格局</div>
                 </div>
-                <div class="col-md-6">OpenLedger帮助您从这些主要的区块链机会中受益，从而使数百个供应链运营更具成本效益：</div>
+                <div class="col-md-6">从这些区块链主要的特性中受益，从而使供应链的运营成本更具效益：</div>
             </div>
             <div class="point-list point-list-accordion">
                 <div class="row">
@@ -89,7 +89,7 @@
                             <h3>完全透明</h3>
                             <div class="text">
                                 <p>
-                                    存储在区块链中的记录都可以同时、即时地发送给发送方、接收方、托运人和监管机构。这种数据的可访问性使决策和操作的流程变得更具效率，更加简单。并且流程的复杂性也能大大降低。
+                                    存储在区块链中的记录可以同时、即时地发送给发送方、接收方、托运人和监管机构，使决策和操作的流程变得更具效率，更加简单。并且流程的复杂性也能大大降低。
                                 </p>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                             <h3>智能合约</h3>
                             <div class="text">
                                 <p>
-                                    使用区块链智能合约的技术能够简化、改善货物到港和离岗、装运、所有权变更等其他操作。以前需要手动执行的过程现在完全可以自动化执行，从而使得您的运营成本大大的降低。
+                                    区块链智能合约能够简化、改善货物到港和离岗、装运、所有权变更等其他操作。以前需要手动执行的过程现在可以自动化的执行，从而使运营成本大大的降低。
                                 </p>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                             <h3>操作安全</h3>
                             <div class="text">
                                 <p>
-                                    区块链上的记录无法删除、隐藏或篡改，并且可以防止未经授权的访问。这是一种从根本上能保证安全的适合供应链使用的点对点供应链安全解决方案。
+                                    区块链上的记录无法删除、隐藏或篡改，并且可以防止未经过授权的访问，从根本上保证数据安全。
                                 </p>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                             <h3>端到端可追溯性</h3>
                             <div class="text">
                                 <p>
-                                    可以跟踪每一笔资产的来源、性质和跨越贸易区域和边境的流动。识别欺诈、盗窃和损坏，并可在问题发生之前采取预防措施。
+                                    跟踪每一笔资产的来源、性质和跨越贸易区域和边境的流动。识别欺诈、盗窃和损坏，并可在问题发生之前采取预防措施。
                                 </p>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                             <h3>认证和合规</h3>
                             <div class="text">
                                 <p>
-                                    企业管理商品和员工的合规性、验证和认证方面，从来没有像有了区块链技术以后这样简单。
+                                    企业管理商品和员工的合规性、验证和认证方面。
                                 </p>
                             </div>
                         </div>
@@ -147,24 +147,12 @@
                 </div>
             </div>
         </div>
-        <div class="automotive-solutions">
-            <div class="container">
-                <h3>已经在供应链的领域中使用区块链技术并受益的公司</h3>
-                <div class="companies-icons companies-icons6">
-                    <img src="/images/companies/supply-chain1.svg">
-                    <img src="/images/companies/supply-chain2.svg">
-                    <img src="/images/companies/supply-chain3.svg">
-                    <img src="/images/companies/supply-chain4.svg">
-                    <img src="/images/companies/supply-chain5.svg">
-                    <img src="/images/companies/supply-chain6.svg">
-                </div>
-            </div>
-        </div>
+        
         <% include ../common/quote.ejs %>
         <div class="additional-schemes-block">
             <div class="container">
                 <h2 class="mt-40">区块链技术支撑的供应链</h2>
-                <div class="h4 gor-100">从供应商到客户，每一环节的运输状态以及任何一方的信息都永久的记录在账本中</div>
+                <div class="h4 gor-100">从供应商到客户，每一个环节的运输状态以及任何一方的信息都永久的记录在账本中</div>
                 <div class="additional-schemes">
                     <img class="additional-scheme additional-scheme-1170"
                         src="/images/additional-schemes/supply-chain_1170.svg">
@@ -181,15 +169,15 @@
         <div class="container">
             <h2 class="mt-40">让运营更顺利，让客户更满意</h2>
             <div class="h4 narrow-100">
-                去中心化的供应链正在影响公司、企业、集团和各行各业的市场，改变全球贸易活动和环境。
+                去中心化的供应链正在影响公司、集团和各行各业的市场，改变全球贸易的活动和环境。
             </div>
             <div class="tiles-list">
                 <div class="row tiles-lable-collapse tiles-lable-collapse-chains">
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
-                            <h3>客户满意度</h3>
+                            <h3>增加客户满意度</h3>
                             <div class="text">
-                                无论是准确地跟踪产品的质量和产地还是更顺畅、更平滑的库存管理和在应对客户需求的变化等方面都比以往任何时候都更好、更快、更可靠。
+                                无论是准确地跟踪产品的质量和产地还是库存管理和在应对客户需求的变化等方面都比以前更好、更快、更准确。
                             </div>
                             <div class="fade-out"></div>
                         </div>
@@ -198,7 +186,7 @@
                         <div class="tile tile-collapse">
                             <h3>公平交易</h3>
                             <div class="text">
-                                基于区块链技术可以验证资产的来源、制造商、材料等。公司减少了假冒伪劣产品，以此来推动公司的可持续化发展和遵守道德的贸易、人权、环保等的可查验性。
+                                基于区块链技术可以验证资产来源、制造商、材料等。减少了假冒伪劣产品，推动公司的可持续化发展和遵守道德的贸易、人权、环保等的可验证性。
                             </div>
                             <div class="fade-out"></div>
                         </div>
@@ -207,7 +195,7 @@
                         <div class="tile tile-collapse">
                             <h3>品牌推广</h3>
                             <div class="text">
-                                通过提供一流的服务来实现品牌竞争优势。更好的工作流程、透明度和效率提高了合作伙伴和员工之间的信任，也提高了销售和收入。
+                                通过提供一流的服务来实现品牌竞争优势。更加完善的工作流程、透明度和更高的效率提高了合作伙伴和员工之间的信任，也提高了销售业绩和收入。
                             </div>
                             <div class="fade-out"></div>
                         </div>
@@ -215,7 +203,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>贸易往来便利化</h3>
-                            <div class="text">简化的流程使您能够有效地建立跨越国界、司法管辖区和业务差异的联系。</div>
+                            <div class="text">简化的工作流程使您能建立跨越国界、司法管辖区的业务和联系。</div>
                             <div class="fade-out"></div>
                         </div>
                     </div>
@@ -223,7 +211,7 @@
                         <div class="tile tile-collapse">
                             <h3>竞争优势</h3>
                             <div class="text">
-                                对于初创公司来说，使用区块链技术进行运营优化是战胜更强大的竞争对手的关键。我们基于区块链的解决方案使您可以应对整个行业的挑战,在充满激烈竞争的市场中获得优势。
+                                对于初创企业来说，使用区块链技术进行优化运营是更强大竞争对手的关键。基于区块链的解决方案可以应对整个行业的挑战,在激烈竞争的市场中获得优势。
                             </div>
                             <div class="fade-out"></div>
                         </div>
