--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -191,12 +191,12 @@
                             </div>
                             <span>比特股</span>
                         </div>
-                        <div class="custom-tech-point-icon df">
+                        <!-- <div class="custom-tech-point-icon df">
                             <div class="wrap-img">
                                 <img src="/images/Uploads/bitcoin.svg" alt="genEOS">
                             </div>
                             <span>GenEOS</span>
-                        </div>
+                        </div> -->
                         <div class="custom-tech-point-icon df">
                             <div class="wrap-img">
                                 <img src="/images/Uploads/ethereum.svg"
