--- a/views/solutions/logistics.ejs
+++ b/views/solutions/logistics.ejs
@@ -54,12 +54,12 @@
             <div class="container">
                 <h2 class="mt-40">目前的物流行业所面临的问题</h2>
                 <div class="gor-100">
-                    <div class="h4">随着物联网、虚拟现实、增强现实、人工智能、机器学习、机器人等高新科技的发展彻底改变了传统的物流行业，但是物流行业仍然效率低下且缺少改进的方法。</div>
+                    <div class="h4">随着物联网、虚拟现实、增强现实、人工智能、机器学习、机器人等高新科技的发展彻底改变了传统的物流行业，但是物流行业仍然存在效率低下且缺少改进的方法。</div>
                 </div>
                 <div class="industry-faces mt60">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h3 class="black-desc">如今，全球物流行业主要面临的挑战：</h3>
+                            <h3 class="black-desc gor-100">全球物流行业主要面临的挑战：</h3>
                         </div>
                         <div class="col-lg-6">
                             <div class="row bold-list">
@@ -81,21 +81,8 @@
         </div>
         <div class="enhance-business-content we-change-the-game">
             <div class="container">
-                <h2>我们如何通过区块链改进物流行业的规则</h2>
-                <div class="gor-100">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="h4">
-                                <p>通过区块链改善物流公司的流程</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 font-weight-bold">
-                            <p>我们的研发团队知道如何将区块链的解决方案实施到物流行业中去</p>
-                        </div>
-                    </div>
-                </div>
+                <h2>通过区块链改进物流行业面临的各种问题</h2>
                 <div class="row tiles-lable enhance-tiles-lable blockchain-logistics-lable tiles-lable-collapse">
-
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>数据透明</h3>
@@ -107,7 +94,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>流程自动化</h3>
-                            <div class="text">当满足了智能合约所设定的条件，就无需在手动的操作。智能合约可以自动执行出发、装运、所有权的变更和其它程序。</div>
+                            <div class="text">当满足了智能合约所设定的条件，就无需在手动的操作。智能合约可以自动执行出发、装运、所有权的变更和其它操作。</div>
                             <div class="fade-out"></div>
                         </div>
                     </div>
@@ -115,7 +102,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>强大的安全性</h3>
-                            <div class="text">存储在区块链上的数据可以防止伪造、不小心丢失、未授权</div>
+                            <div class="text">存储在区块链上的数据可以防止伪造、丢失、未经授权的访问。</div>
                             <div class="fade-out"></div>
                         </div>
                     </div>
@@ -123,7 +110,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>可追溯性</h3>
-                            <div class="text">区块链可让您跟踪运输物品的每个动作、停靠点。</div>
+                            <div class="text">跟踪运输过程的每个动作、停靠点，且可追根溯源。</div>
                             <div class="fade-out"></div>
                         </div>
                     </div>
@@ -131,7 +118,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>真伪鉴定</h3>
-                            <div class="text">通过数据的透明性和可追溯性，最终用户可以轻松的查询到货物是否符合规则。例如：原产国、合法性、运输条件等。</div>
+                            <div class="text">通过数据的透明性和可追溯性，最终用户可以轻松的查询到货物是否符合规则。例如：原产地、合法性、运输过程等。</div>
                             <div class="fade-out"></div>
                         </div>
                     </div>
@@ -139,7 +126,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>即时合作</h3>
-                            <div class="text">我们基于区块链的系统提供的可访问性实现了各方之间的无缝协作。并且提供了一组强大的工作流程工具，例如电子签名和联系人的验证。</div>
+                            <div class="text">基于区块链的系统提供的数据真实性实现了各方之间的无缝协作，例如电子签名和联系人真实性的验证。</div>
                             <div class="fade-out"></div>
                         </div>
                     </div>
@@ -278,28 +265,20 @@
             <hr class="grey-divider">
             </hr>
         </div>
-        <div class="automotive-solutions">
-            <div class="container">
-                <h3>使用区块链技术的物流公司：</h3>
-                <div class="companies-icons companies-icons4">
-                    <img src="/images/companies/logistics1.svg">
-                    <img src="/images/companies/logistics2.svg">
-                    <img src="/images/companies/logistics3.svg">
-                    <img src="/images/companies/logistics4.svg">
-                </div>
-            </div>
-        </div>
+
         <!-- Quote -->
         <% include ../common/quote.ejs %>
         <!-- Quote -->
         <div class="logistics-processes">
             <div class="container">
-                <h2>通过区块链改善物流公司的流程</h2>
+                <h2>改善物流公司的管理流程</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        如今，区块链技术正在重塑物流业，许多企业正在以创新和利益的角度开始重建流程。<br />
+                        区块链技术正在重塑物流行业，许多企业正在以创新和利益的角度开始重建流程。
                         <br />
-                        抓住早期引入区块链技术带来的行业竞争上的优势和享受有效利用区块链的物流业务的好处，例如：</div>
+                        <br />
+                        区块链能给物流企业带来的好处：
+                    </div>
                 </div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
@@ -308,7 +287,7 @@
                             <div class="point point-accordion">
                                 <h3>建立信任</h3>
                                 <div class="text">
-                                    <p>在供应链中数据的透明性和可追溯性使我们的合作伙伴和客户之间有更多的信任。而且信任是相互的，它不仅可以为您的公司带来好处，也可以为交易方带来好处。</p>
+                                    <p>在供应链中数据的透明性和可追溯性使您和客户之间相互信任。</p>
                                 </div>
                             </div>
                         </div>
@@ -317,23 +296,23 @@
                             <div class="point point-accordion">
                                 <h3>减少成本</h3>
                                 <div class="text">
-                                    <p>通过使用智能合约将业务流程自动化，可以大大降低运营成本。 除此之外，因为许多操作都是自动执行无需人工的干预， 因此，您的业务效率也会大大的提升。</p>
+                                    <p>通过使用智能合约将业务流程自动化，可以大大降低运营成本。 除此之外，因为许多操作都是自动执行无需人工的干预， 因此，您的业务效率也会大大的提升，并且还减少了人为的误操作。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>提升信用</h3>
+                                <h3>提升信用度</h3>
                                 <div class="text">
-                                    <p>透明、不可篡改的账本使您能充分展示您的诚信，从而提高您的信用。</p>
+                                    <p>透明、不可篡改的账本能充分展示您的诚信记录，从而提高您的信用。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>提升自信</h3>
+                                <h3>公平公正</h3>
                                 <div class="text">
                                     <p>区块链可使承包商、合作方和监管机构的合作变得安全和透明；任何一方如有争议，所有方均可以获得完整的记录。</p>
                                 </div>
@@ -344,7 +323,7 @@
                             <div class="point point-accordion">
                                 <h3>安全放心</h3>
                                 <div class="text">
-                                    <p>在基于区块链的系统中，您拥有企业最终的控制权；数据盗窃是不可能发生的，通过自动、不可篡改的记账功能可以很容易的证明数据的伪造。</p>
+                                    <p>在基于区块链的系统中，您拥有企业最终的控制权；数据的盗窃和伪造是不可能发生的，通过自动的、不可篡改的记账功能可以很容易追踪到数据的操作和流向。</p>
                                 </div>
                             </div>
                         </div>
@@ -354,7 +333,7 @@
                                 <h3>提高竞争力</h3>
                                 <div class="text">
                                     <p>
-                                        早期的采用者将从区块链改变的业务流程中获得非常大的竞争优势，也包括改进服务和提高收益的机会。
+                                        越早使用区块链改变业务即可获得越大的企业竞争优势。
                                     </p>
                                 </div>
                             </div>
