物联网翻译修复

--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -126,7 +126,7 @@
                                 <h3>事务自动化与验证</h3>
                                 <div class="text">
                                     <p>
-                                        智能合约自动处理每个事务，包括机器和机器的交互，允许远程资产的管理和即时的数据验证。
+                                        智能合约自动处理每个事务，包括机器和机器之间的交互，且能够远程的管理资产和即时的数据验证。
                                     </p>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                                 <h3>数据交换</h3>
                                 <div class="text">
                                     <p>
-                                        在去中心化的区块链系统中，实时共享物联网产生的数据流。每个记录都是不可变的，并且对所有网络成员可见。
+                                        在去中心化的区块链系统中能够实时的共享物联网产生的数据并写入区块链中，每条记录都是不可变的，并且对所有网络成员可见。
                                     </p>
                                 </div>
                             </div>
@@ -159,7 +159,7 @@
                                 <h3>网络安全</h3>
                                 <div class="text">
                                     <p>
-                                        消除了集中的数据湖。分布式账本通过基于哈希的安全、定制的共识协议和软件更新来解决当前的物联网安全威胁。
+                                        解决了集中的数据湖带来的隐患。通过基于哈希加密的分布式账本，能保证数据的绝对的安全，以及不断的更新软件来解决当前物联网行业面临的安全问题。
                                     </p>
                                 </div>
                             </div>
@@ -187,7 +187,8 @@
                         <div class="puffy">
                             <h3 class="h5">区块链-支持物联网业务网络</h3>
                             <h4 class="grey18">
-                                物联网收集大量数据，为新的商业决策提供信息。区块链自动化安全性和可审核性，提供可验证的、安全的和永久的数据存储。它们共同使数据可用、可访问和安全。
+                                物联网需要收集大量数据，为商业重大决策提供信息。<br>
+                                通过区块链提供可验证、安全和永久的数据存储，使数据高可用、安全。
                             </h4>
                         </div>
                     </div>
@@ -205,10 +206,7 @@
                     </div>
                     <div class="col-md-5">
                         <p>
-                            OpenLedger的内部团队由顾问、架构师、开发人员和QA专家组成，他们将帮助您的企业克服瓶颈和障碍，实现区块链物联网。
-                        </p>
-                        <p>
-                            为了给您带来采用这些技术的最终价值，我们使用与敏捷开发方法相结合的高级研发过程。
+                            OpenLedger的内部团队由架构师、开发人员和QA专家组成，他们将帮助您的企业克服瓶颈和障碍，实现区块链物联网。
                         </p>
                     </div>
                 </div>
