--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -109,7 +109,7 @@
                             <h3>操作安全</h3>
                             <div class="text">
                                 <p>
-                                    区块链上的记录无法删除、隐藏或篡改，并且可以防止未经过授权的访问，从根本上保证数据安全。
+                                    区块链上的记录无法删除、隐藏或篡改，并且可以防止未经过授权的操作和访问，从根本上保证数据的安全。
                                 </p>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
         <div class="container">
             <h2 class="mt-40">让运营更顺利，让客户更满意</h2>
             <div class="h4 narrow-100">
-                去中心化的供应链正在影响公司、集团和各行各业的市场，改变全球贸易的活动和环境。
+                去中心化的供应链正在影响各行各业的市场，改变全球贸易的活动和环境。
             </div>
             <div class="tiles-list">
                 <div class="row tiles-lable-collapse tiles-lable-collapse-chains">
@@ -211,7 +211,7 @@
                         <div class="tile tile-collapse">
                             <h3>竞争优势</h3>
                             <div class="text">
-                                对于初创企业来说，使用区块链技术进行优化运营是更强大竞争对手的关键。基于区块链的解决方案可以应对整个行业的挑战,在激烈竞争的市场中获得优势。
+                                对于初创企业来说，使用区块链技术进行优化运营是战胜更强大竞争对手的一种手段。基于区块链的解决方案可以应对整个行业的挑战，在激烈竞争的市场中获得更大的优势。
                             </div>
                             <div class="fade-out"></div>
                         </div>
@@ -220,7 +220,7 @@
                         <div class="tile tile-collapse">
                             <h3>安全的互动</h3>
                             <div class="text">
-                                区块链是供应链中所有参与方之间的单一通信点，在这个网络中，只有选定的参与方可以访问数据，每个操作都记录在分布式账本上，并受到安全保护。
+                                整个去中心化的网络中，只有选定的参与方可以访问数据，每个操作都会被记录在分布式账本上。
                             </div>
                             <div class="fade-out"></div>
                         </div>
