--- a/views/solutions/healthcare.ejs
+++ b/views/solutions/healthcare.ejs
@@ -41,7 +41,7 @@
                 <div class="col-lg-9 col-sm-12">
                     <h1>基于区块链的<br>医疗保健解决方案</h1>
                     <div class="h2-banner h2-banner-indents">
-                        提高医疗服务的质量和效率。<br>使用区块链来保护隐私，更轻松，更有效的数据交换以及安全的患者对自己数据的控制。
+                        提高医疗服务的质量和效率。<br><br>使用区块链来保护隐私，更轻松，更有效的<br>数据交换以及安全的患者对自己数据的控制。
                     </div>
                     <a href="#contact" class="link">免费获取报价</a>
                     <div class="bg"></div>
