--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -163,7 +163,7 @@
             <!-- Technologies -->
             <div class="row custom-tech-point">
                 <div class="col-md-4 col-sm-12">
-                    <h3 class="title-check">技术栈</h3>
+                    <h3 class="title-check">开发语言和工具</h3>
                 </div>
                 <div class="col-md-8 col-sm-12">
                     <div class="grey-block">
@@ -180,7 +180,7 @@
             </div>
             <div class="row custom-tech-point">
                 <div class="col-md-4 col-sm-12">
-                    <h3 class="title-check">区块链技术</h3>
+                    <h3 class="title-check">区块链底层平台</h3>
                 </div>
                 <div class="col-md-8 col-sm-12">
                     <div class="grey-block">
