--- a/views/solutions/healthcare.ejs
+++ b/views/solutions/healthcare.ejs
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h4 class="h4">
-                            <p>现代医疗保健行业当前面临的挑战是：</p>
+                            <p>当前医疗保健行业面临的挑战：</p>
                         </h4>
                     </div>
                     <div class="col-md-4">
@@ -117,7 +117,7 @@
                 </div>
             </div>
         </div>
-        <div class="healthcare-opportunities-applications">
+        <!-- <div class="healthcare-opportunities-applications">
             <div class="container">
                 <h2 class="mt-40">区块链与医疗保健：从游击队到正规军的转变</h2>
                 <div class="row">
@@ -149,21 +149,24 @@
                 </div>
                 <hr class="grey-divider dn768">
             </div>
-        </div>
+        </div> -->
         <div class="two-row-text">
+
             <div class="container">
+                    <img class="manufacturer-dots" style="margin: 20px 0;" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
+
                 <div class="gor-100">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="h4">
                                 <p>
-                                    医疗保健中的区块链技术可提供改进的数据交换完整性，同意管理，实时数据共享，记录保存和更准确的数据。
+                                    区块链技术可提供的数据交换的完整性、实时的数据共享，记录可信度更高的数据。
                                 </p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="h4">
-                                <p>OpenLedger's 经验丰富的团队了解区块链技术通过以下用例来转变医疗保健的力量：</p>
+                                <p>通过以下的解决方案来改进医疗行业：</p>
                             </div>
                         </div>
                     </div>
