--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -73,13 +73,13 @@
                             <div class="col-md-6">
                                 <div class="iot-gathers-massive-img-point">
                                     <div class="iot-gathers-massive-img iot-gathers-massive-img01"></div>
-                                    <p>截止2019年，20%的物联网设备将采用区块链技术</p>
+                                    <p><a class="teal-link" style="white-space: initial;" target="_blank" href="https://new.qq.com/rain/a/20190430A0EVT5">截止2019年，20%的物联网设备将采用区块链技术</a></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="iot-gathers-massive-img-point">
                                     <div class="iot-gathers-massive-img iot-gathers-massive-img02"></div>
-                                    <p>全球物联网设备的数量将从2017年的270亿增长至2030年的1250亿</p>
+                                    <p><a class="teal-link" style="white-space: initial;" target="_blank" href="http://www.elecfans.com/video/20190115850776.html">全球物联网设备的数量将从2017年的270亿增长至2030年的1250亿</a></p>
                                 </div>
                             </div>
                         </div>
