--- a/views/solutions/healthcare.ejs
+++ b/views/solutions/healthcare.ejs
@@ -226,10 +226,7 @@
                                 <h3>研制新药</h3>
                                 <div class="text">
                                     <p>
-                                        区块链技术提高了各个利益方之间的透明度和信任度，降低了审计成本，并改善了药品供应链管理。
-                                    </p>
-                                    <p>
-                                        包括参与者（制造商，广告包装商，分销商，配送商和监管机构）以及更多详细信息，例如制造地、装运日期、批号、有效期和唯一标识号。
+                                        区块链技术提高了各个利益方（制造商，广告包装商，分销商，配送商和监管机构）之间的透明度和信任度以及更多详细信息（例如制造地、装运日期、批号、有效期和唯一标识号），并降低了审计成本，改善了药品供应链管理。
                                     </p>
                                 </div>
                             </div>
