--- a/views/solutions/healthcare.ejs
+++ b/views/solutions/healthcare.ejs
@@ -251,7 +251,7 @@
                                 <h3>主权化的健康档案</h3>
                                 <div class="text">
                                     <p>
-                                        患者可以控制自己的医疗数据，包括疾病的历史、治疗的方法，以及有关于家族遗传病的数据等等访问权限。
+                                        患者可以控制自己的医疗数据，包括疾病的历史、治疗的方法，以及有关于家族遗传病史的数据等访问权限。
                                     </p>
                                     <p>
                                         未经患者授权，不能访问或修改患者本人的医疗数据。
